martian-derive/tests/ui_martian_filetype/test_empty_input.stderr
error: The input to the martian_filetype! macro needs to be two items separated by a comma.
    The first item is the struct name that will be generated and the second item is the filetype extension within double quotes.
    For example martian_filetype! {TxtFile, "txt"}
 --> $DIR/test_empty_input.rs:3:1
  |
3 | martian_filetype! {}
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
