martian-derive/tests/ui_martian_filetype/test_empty_input.rs
use martian_derive::martian_filetype;

martian_filetype! {}

fn main() {}